--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
+		<script type="text/javascript" src="js/ext-lib/jquery-1.11.0.min.js"></script>
 		<script type="text/javascript" src="js/global.js"></script>
 		<script type="text/javascript" src="js/history.js"></script>
 		<script type="text/javascript" src="js/element.js"></script>
